[doc] Fix Arrow Flight docs (#982)